--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
             </p>
             <a
               href="Resume/Resume-Darshan .pdf"
-              class="btn btn-dark btn-lg"
+              class="btn btn-primary btn-lg"
               target="_blank"
               >Download Resume</a
             >
