--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
               project.
             </p>
             <a
-              href="Resume/Resume-Darshan .pdf"
+              href="Resume/Resume-Darshan-1.pdf"
               class="btn btn-primary btn-lg"
               target="_blank"
               >Download Resume</a
@@ -705,3 +705,4 @@
   ></script>
   <script src="index.js"></script>
 </html>
+
