--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
               project.
             </p>
             <a
-              href="Resume/Resume-Darshan-1.pdf"
+              href="Resume/Darshan-Resume-2026.pdf"
               class="btn btn-primary btn-lg"
               target="_blank"
               >Download Resume</a
@@ -705,4 +705,5 @@
   ></script>
   <script src="index.js"></script>
 </html>
+
 
